# egg-bot

./: Cargo.toml
assets/: misc.aseprite  ovo.aseprite
src/: main.rs
